     ascending order now


** adjustments to cobc's warning options:
   -Wdangling-text "new" option to enable "source text after program area",
      not included in -Wall any more
   -Wno-ignored-error allows to suppress messages that normally would be an
      error and only allowed because they are never executed
   -Wimplicit-define and -Wcorresponding are now enabled by default

  ** fixes and enhancements for dump generation

  ** tested and adjusted to work on more systems (OS + compilers)

  ** the GnuCOBOL Manual has been updated


* Removed functions

** SCREEN SECTION, REPORT-WRITER module: removed non-standard extension
   "LINE / COL signed-integer" (inadvertently available since 2.2/3.0rc1);
   which will now raise an error "unsigned integer expected";
   if used replace by standard "LINE / COL +/- integer"


* Changes to the COBOL compiler (cobc) options:

** new options:

   -f[no]-diagnostics-show-option, enabled by default, shows the
       command line option responsible for the diagnostic message

   TO BE MERGED (not in trunk yet):
   -f[no]-ec=exception-name to tune the exception checks similar to the >>TURN
       directive, you may also leave out the "EC-" prefix here, example to
       enable all checks but disable all bound checks but OCCURS DEPENDING ON:
       cobc -debug -fno-ec=bound -fec=bound-odo

** adjustments to warning options:
   -Wextra "new" option to enable every possible warning that is not dialect
       specific (this option used to be called -W)
   -Wadditional  new warning group for all warnings that don't have a group
       on their own
   -Wno-error and -Wno-error=<warning> to treat (specific <warning>s) not as error


* Changes in the COBOL runtime (libcob)

** Messages from the COBOL runtime are also translated now (if installed).
   To prevent this disable translations in general with using the configure
   option --disable-nls (or by deactivating ENABLE_NLS in config.h).
